foxtrot/src/foxtrotParser.java
// Generated from foxtrot.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class foxtrotParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VOID=1, RETURN=2, DEF=3, IF=4, ELSE=5, WHILE=6, VAR=7, TYPE_INT=8, TYPE_STRING=9, 
		NOT=10, MUL=11, MOD=12, DIV=13, ADD=14, SUB=15, EXP=16, EQ=17, NEQ=18, 
		LEQ=19, GEQ=20, LT=21, GT=22, COMMA=23, AND=24, OR=25, DOUBLE_QUOTE=26, 
		LB=27, RB=28, LCB=29, RCB=30, LSB=31, RSB=32, ASGN=33, INCR=34, SEMICOLON=35, 
		INT=36, STRING=37, WHITESPACE=38, NEWLINE=39, STRING_LITERAL=40;
	public static final String[] tokenNames = {
		"<INVALID>", "'void'", "'return'", "'def'", "'if'", "'else'", "'while'", 
		"'var'", "'int'", "'string'", "'not'", "'*'", "'%'", "'/'", "'+'", "'-'", 
		"'^'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "','", "'&&'", "'||'", 
		"'\"'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", "'+='", "';'", 
		"INT", "STRING", "WHITESPACE", "NEWLINE", "STRING_LITERAL"
	};
	public static final int
		RULE_init = 0, RULE_statements = 1, RULE_statement = 2, RULE_var_declaration = 3, 
		RULE_array_declaration = 4, RULE_var_type = 5, RULE_identifier = 6, RULE_arity = 7, 
		RULE_argument = 8, RULE_lvalue = 9, RULE_condition = 10, RULE_return_type = 11, 
		RULE_function_call = 12, RULE_expression = 13;
	public static final String[] ruleNames = {
		"init", "statements", "statement", "var_declaration", "array_declaration", 
		"var_type", "identifier", "arity", "argument", "lvalue", "condition", 
		"return_type", "function_call", "expression"
	};

	@Override
	public String getGrammarFileName() { return "foxtrot.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public foxtrotParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28); statements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(foxtrotParser.NEWLINE); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode NEWLINE(int i) {
			return getToken(foxtrotParser.NEWLINE, i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30); statement();
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(31); match(NEWLINE);
				setState(32); statement();
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclareContext extends StatementContext {
		public Array_declarationContext array_declaration() {
			return getRuleContext(Array_declarationContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(foxtrotParser.SEMICOLON, 0); }
		public Var_declarationContext var_declaration() {
			return getRuleContext(Var_declarationContext.class,0);
		}
		public TerminalNode VAR() { return getToken(foxtrotParser.VAR, 0); }
		public DeclareContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterDeclare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitDeclare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitDeclare(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NewlineContext extends StatementContext {
		public List<TerminalNode> NEWLINE() { return getTokens(foxtrotParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(foxtrotParser.NEWLINE, i);
		}
		public NewlineContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterNewline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitNewline(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitNewline(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignContext extends StatementContext {
		public Token op;
		public TerminalNode INCR() { return getToken(foxtrotParser.INCR, 0); }
		public TerminalNode SEMICOLON() { return getToken(foxtrotParser.SEMICOLON, 0); }
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public TerminalNode ASGN() { return getToken(foxtrotParser.ASGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileContext extends StatementContext {
		public List<TerminalNode> NEWLINE() { return getTokens(foxtrotParser.NEWLINE); }
		public TerminalNode WHILE() { return getToken(foxtrotParser.WHILE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode LB() { return getToken(foxtrotParser.LB, 0); }
		public TerminalNode NEWLINE(int i) {
			return getToken(foxtrotParser.NEWLINE, i);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode RB() { return getToken(foxtrotParser.RB, 0); }
		public TerminalNode RCB() { return getToken(foxtrotParser.RCB, 0); }
		public TerminalNode LCB() { return getToken(foxtrotParser.LCB, 0); }
		public WhileContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CallContext extends StatementContext {
		public TerminalNode SEMICOLON() { return getToken(foxtrotParser.SEMICOLON, 0); }
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public CallContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfContext extends StatementContext {
		public StatementsContext tr;
		public StatementsContext fa;
		public List<TerminalNode> NEWLINE() { return getTokens(foxtrotParser.NEWLINE); }
		public TerminalNode IF() { return getToken(foxtrotParser.IF, 0); }
		public TerminalNode RCB(int i) {
			return getToken(foxtrotParser.RCB, i);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode LB() { return getToken(foxtrotParser.LB, 0); }
		public TerminalNode NEWLINE(int i) {
			return getToken(foxtrotParser.NEWLINE, i);
		}
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public TerminalNode ELSE() { return getToken(foxtrotParser.ELSE, 0); }
		public TerminalNode RB() { return getToken(foxtrotParser.RB, 0); }
		public TerminalNode LCB(int i) {
			return getToken(foxtrotParser.LCB, i);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public List<TerminalNode> RCB() { return getTokens(foxtrotParser.RCB); }
		public List<TerminalNode> LCB() { return getTokens(foxtrotParser.LCB); }
		public IfContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitIf(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DefContext extends StatementContext {
		public TerminalNode SEMICOLON() { return getToken(foxtrotParser.SEMICOLON, 0); }
		public TerminalNode NEWLINE(int i) {
			return getToken(foxtrotParser.NEWLINE, i);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public Return_typeContext return_type() {
			return getRuleContext(Return_typeContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode LCB() { return getToken(foxtrotParser.LCB, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(foxtrotParser.COMMA, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(foxtrotParser.NEWLINE); }
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public TerminalNode LB() { return getToken(foxtrotParser.LB, 0); }
		public TerminalNode DEF() { return getToken(foxtrotParser.DEF, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode RB() { return getToken(foxtrotParser.RB, 0); }
		public List<TerminalNode> COMMA() { return getTokens(foxtrotParser.COMMA); }
		public TerminalNode RETURN() { return getToken(foxtrotParser.RETURN, 0); }
		public TerminalNode RCB() { return getToken(foxtrotParser.RCB, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public DefContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			int _alt;
			setState(135);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				_localctx = new DeclareContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(38); match(VAR);
				setState(41);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(39); var_declaration();
					}
					break;

				case 2:
					{
					setState(40); array_declaration();
					}
					break;
				}
				setState(43); match(SEMICOLON);
				}
				break;

			case 2:
				_localctx = new AssignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(45); lvalue();
				setState(46);
				((AssignContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==ASGN || _la==INCR) ) {
					((AssignContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				consume();
				setState(47); expression(0);
				setState(48); match(SEMICOLON);
				}
				break;

			case 3:
				_localctx = new WhileContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(50); match(WHILE);
				setState(51); match(LB);
				setState(52); condition(0);
				setState(53); match(RB);
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(54); match(NEWLINE);
					}
					}
					setState(59);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(60); match(LCB);
				setState(61); statements();
				setState(62); match(RCB);
				}
				break;

			case 4:
				_localctx = new IfContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(64); match(IF);
				setState(65); match(LB);
				setState(66); condition(0);
				setState(67); match(RB);
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(68); match(NEWLINE);
					}
					}
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(74); match(LCB);
				setState(75); ((IfContext)_localctx).tr = statements();
				setState(76); match(RCB);
				setState(94);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(77); match(NEWLINE);
						}
						}
						setState(82);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(83); match(ELSE);
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(84); match(NEWLINE);
						}
						}
						setState(89);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(90); match(LCB);
					setState(91); ((IfContext)_localctx).fa = statements();
					setState(92); match(RCB);
					}
					break;
				}
				}
				break;

			case 5:
				_localctx = new DefContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(96); match(DEF);
				setState(97); return_type();
				setState(98); identifier();
				setState(99); match(LB);
				setState(108);
				_la = _input.LA(1);
				if (_la==TYPE_INT || _la==TYPE_STRING) {
					{
					setState(100); argument();
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(101); match(COMMA);
						setState(102); argument();
						}
						}
						setState(107);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(110); match(RB);
				setState(111); match(LCB);
				setState(112); statements();
				setState(122);
				_la = _input.LA(1);
				if (_la==RETURN) {
					{
					setState(113); match(RETURN);
					setState(114); expression(0);
					setState(115); match(SEMICOLON);
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(116); match(NEWLINE);
						}
						}
						setState(121);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(124); match(RCB);
				}
				break;

			case 6:
				_localctx = new CallContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(126); function_call();
				setState(127); match(SEMICOLON);
				}
				break;

			case 7:
				_localctx = new NewlineContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(129); match(NEWLINE);
						}
						} 
					}
					setState(134);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declarationContext extends ParserRuleContext {
		public Var_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration; }
	 
		public Var_declarationContext() { }
		public void copyFrom(Var_declarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclareVarContext extends Var_declarationContext {
		public Var_typeContext var_type() {
			return getRuleContext(Var_typeContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public DeclareVarContext(Var_declarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterDeclareVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitDeclareVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitDeclareVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declarationContext var_declaration() throws RecognitionException {
		Var_declarationContext _localctx = new Var_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_declaration);
		try {
			_localctx = new DeclareVarContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(137); var_type();
			setState(138); identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_declarationContext extends ParserRuleContext {
		public Array_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_declaration; }
	 
		public Array_declarationContext() { }
		public void copyFrom(Array_declarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclareArrayContext extends Array_declarationContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode RSB() { return getToken(foxtrotParser.RSB, 0); }
		public List<TerminalNode> COMMA() { return getTokens(foxtrotParser.COMMA); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode LSB() { return getToken(foxtrotParser.LSB, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(foxtrotParser.COMMA, i);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode TYPE_INT() { return getToken(foxtrotParser.TYPE_INT, 0); }
		public DeclareArrayContext(Array_declarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterDeclareArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitDeclareArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitDeclareArray(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Array_declarationContext array_declaration() throws RecognitionException {
		Array_declarationContext _localctx = new Array_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_array_declaration);
		int _la;
		try {
			_localctx = new DeclareArrayContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(140); match(TYPE_INT);
			setState(141); match(LSB);
			setState(142); expression(0);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(143); match(COMMA);
				setState(144); expression(0);
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150); match(RSB);
			setState(151); identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_typeContext extends ParserRuleContext {
		public TerminalNode TYPE_STRING() { return getToken(foxtrotParser.TYPE_STRING, 0); }
		public TerminalNode TYPE_INT() { return getToken(foxtrotParser.TYPE_INT, 0); }
		public Var_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterVar_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitVar_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitVar_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_typeContext var_type() throws RecognitionException {
		Var_typeContext _localctx = new Var_typeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			_la = _input.LA(1);
			if ( !(_la==TYPE_INT || _la==TYPE_STRING) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(foxtrotParser.STRING, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155); match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArityContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(foxtrotParser.INT, 0); }
		public ArityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).enterArity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foxtrotListener ) ((foxtrotListener)listener).exitArity(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof foxtrotVisitor ) return ((foxtrotVisitor<? extends T>)visitor).visitArity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArityContext arity() throws RecognitionException {
		ArityContext _localctx = new ArityContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_arity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157); match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
